sins.yml
apiVersion: v1
kind: Namespace
metadata:
#  creationTimestamp: null
  name: sins
#spec: {}
#status: {}
