deployauth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sins
  creationTimestamp: null
  labels:
    app: auth-service
  name: authservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1     #How many extra pods can be deployed
      maxUnavailable: 2 #How many max pods can be deleted
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: auth-service
    spec:
      terminationGracePeriodSeconds: 5
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: auth-service
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            -  All
        readOnlyRootFileSystem: true
        previleged: true
        image: aditya090/projectk8s:auth
        #name: auth-service
        ports:
          - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
#status: {}
