deploygame.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sins
  creationTimestamp: null
  labels:
    app: game-service
  name: gameservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: game-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1     #How many extra pods can be deployed
      maxUnavailable: 2 #How many max pods can be deleted
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: game-service
    spec:
#    - name: game-service
      terminationGracePeriodSeconds: 5
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: game-service
        securityContext:
          allowPrivilegeEscalation: false
          capablities:
            drop:
            - All
          privileged: false
          readOnlyRootFileSystem: true
        image: aditya090/projectk8s:game
       # name: game-service
        ports:
          - containerPort: 8081
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"


#status: {}
