httpredirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-redirect
  namespace: sins
spec:
  parentRefs:
  - name: gateway
    namespace: kgateway-system
    sectionName: http
  hostnames:
  - sillybeings.com
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
