httproute.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: sins
spec:
  parentRefs:
  - name: gateway
    namespace: kgateway-system
  hostnames:
  - "sillybeings.com"
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /
    backendRefs:
    - name: frontend
      namespace: sins
      port: 80
      kind: Service
